Fix master channel selection via kmix main window issue and fix no global master found issue.

Fixes the issue where changing the master control in the KMix main
window doesn't change the master control in tray.

It also solves a problem with the dock icon appearing blank due to the
mixer not able to find any global master. The device id returns
something like "alsa_output.pci-0000_04_00.0.analog-surround-51" for 5.1
and "alsa_output.pci-0000_04_00.0.analog-stereo" for analog stereo and
hence the issue.

Patch by Prasad Murthy.

BUG: 290177
REVIEW: 105422